--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -81,7 +81,7 @@
         timer?.Dispose();
       }
 
-  private Modes activeMode = Modes.Home;
+  private Modes activeMode = Modes.Focus;
 
   private string GetButtonStyles(Modes modes) {
     return modes == activeMode ? "btn btn-primary customBtn active-btn" 
