--- a/Components/Pages/Focus.razor.css
+++ b/Components/Pages/Focus.razor.css
@@ -52,9 +52,18 @@
 }
 .hold {
   position: relative;
+  width: 750px;
+  display: flex;
+  justify-content: center;
   z-index: 1000;
 }
 
 .displayPomo {
   font-size: 170px;
+}
+
+.btnHold {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
 }
